# WaveDance

./: .cursorrules  .gitignore  BUILD_MACOS.md  CHANGELOG.md  Cargo.toml  PROJECT_CONTEXT.md  README.md  TEST.md  Untitled
docs/: 3D_EFFECTS_TECHNICAL.md  CHANGELOG_AGENT.md  COVER_PARTICLE_DEV.md  ESP32_DISPLAY_PLAN.md  HARMONYOS_SPECTRUM_PLAN.md  INSTALL.md  MUSIC_PLATFORM_INTEGRATION.md  MUSIC_PLATFORM_LOGIN_PLAN.md  QUICK_CONTEXT.md  SONIC_TOPOGRAPHY_DEV.md  SOUND_FIELD_DEV.md  VISUALIZATION_MODES_PLAN.md
esp32/: FACTORY_TEST.md  README.md  flash-oled-042-wifi.sh  flash-oled-042.sh  flash.sh  platformio.ini  run-factory-test.sh
esp32/factory-test/: platformio.ini
esp32/include/: config.h  display_driver.h  protocol_decode.h  serial_receiver.h  spectrum_state.h  udp_receiver.h  wifi_config.example.h
esp32/oled-042/: platformio.ini
esp32/src/: main.cpp  protocol_decode.cpp  serial_receiver.cpp  spectrum_state.cpp  udp_receiver.cpp
frontend/: cover-settings.html  cover.html  esp-display-settings.html  index.html  lyrics-search.html  lyrics-settings.html  lyrics.html  music-platform-login.html  music-player-queue.html  music-player.html  music-playlist.html  package.json  player-settings.html  pnpm-lock.yaml  settings.html  songinfo-settings.html  songinfo.html  toolbar.html  vite.config.js  window-manager.html
frontend/src/: amLyricsPanel.js  classicLyricsDom.js  coverSettingsSchema.js  coverSettingsWindow.js  coverWindow.js  espDisplaySettings.js  espDisplaySettingsWindow.js  lrcToTtml.js  lyricsLineTransition.js  lyricsSearchWindow.js  lyricsWindow.js  (+24 more)
scripts/: build-dmg-with-blackhole.sh  build-macos.sh
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: gen_tray_icon.rs
src-tauri/icons/: icon.icns
src-tauri/resources/blackhole/: BlackHole使用说明.txt  README.txt
src-tauri/src/: lyrics.rs  macos_dock.rs  main.rs  now_playing.rs
src-tauri/src/esp_display/: bridge.rs  mod.rs
src-tauri/src/music_platform/: audio_proxy.rs  cookie_store.rs  mod.rs  netease.rs  now_playing_bridge.rs  player.rs  playlists.rs  qq.rs  qq_login.rs  song_url.rs
tests/: pipeline_test.rs
website/: README.md  index.html  main.js  package.json  styles.css
(+118 files in other folders)
