[package]
name = "wavedance-tauri"
version = "0.2.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "deflate", "brotli"] }
urlencoding = "2"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "protocol-asset"] }
tauri-plugin-global-shortcut = "2"
wavedance = { path = ".." }
rustfft = "6"
serialport = "4.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
ncm-api-rs = "0.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
base64 = "0.22"
image = "0.25"
media-remote = "0.3.8"
muda = "0.17"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
qrcode = "0.14"
url = "2"
window-vibrancy = "0.6"
